tests/008_annotations/ingress-annotation-backends.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 008-annot-2
  annotations:
    zproxy.ingress.kubernetes.io/backend-https: "true"
spec:
  ingressClassName: zproxy-ingress

  tls:
  - hosts:
    - 008.annot
    secretName: tls-cert

  rules:
  - host: 008.annot.2
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
